# progressor

./: .gitignore  .gitmodules  CMakeLists.txt
include/glad/: glad.h
src/: base64.h  glad.c  imGuiAnsiColor.hpp  imGuiExtras.hpp  imGuiOkCancel.cpp  imGuiSpinner.hpp  imGuiTextCentered.hpp  jet.cpp  jet.hpp  log.cpp  log.hpp  main.cpp  process.cpp  process.hpp  style.cpp  style.hpp
